// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Content /> Check search field should render with initial search query 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(SearchField)
    pageId="1234"
    query="foo"
  >
    <SearchField
      fetchSuggestions={[Function]}
      name="search"
      openScanner={[Function]}
      pageId="1234"
      query="foo"
      showScannerIcon={true}
      submitSearch={[Function]}
    >
      <div
        aria-hidden={true}
        data-test-id="SearchField"
      >
        <div
          className="css-1jyozbi"
        >
          <div
            className="css-1utu657"
          >
            <form
              action="."
              onSubmit={[Function]}
            >
              <label
                className="css-y5wpat"
                htmlFor="search"
              >
                <div
                  className="css-tzdtea"
                >
                  <Magnifier>
                    <Icon
                      className=""
                      color={null}
                      content="<path d=\\"M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z\\"/>"
                      size="inherit"
                      viewBox="0 0 24 24"
                    >
                      <svg
                        className="css-yys9hb "
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<path d=\\"M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z\\"/>",
                          }
                        }
                        style={
                          Object {
                            "fill": null,
                            "fontSize": "inherit",
                          }
                        }
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      />
                    </Icon>
                  </Magnifier>
                </div>
              </label>
              <Component
                autoComplete={false}
                className="css-1yoassp css-1qnjb83"
                onChange={[Function]}
                onFocusChange={[Function]}
                onSubmit={[Function]}
                setRef={[Function]}
                type="search"
                value="foo"
              >
                <SimpleInput
                  attributes={null}
                  autoComplete={false}
                  autoCorrect={false}
                  className="css-1yoassp css-1qnjb83"
                  disabled={false}
                  id={null}
                  isControlled={false}
                  name={null}
                  onChange={[Function]}
                  onFocusChange={[Function]}
                  onKeyPress={[Function]}
                  onSanitize={[Function]}
                  onSubmit={[Function]}
                  onValidate={[Function]}
                  password={false}
                  setRef={[Function]}
                  type="search"
                  validateOnBlur={true}
                  value="foo"
                >
                  <input
                    autoComplete="off"
                    autoCorrect="off"
                    className="css-1yoassp css-1qnjb83"
                    disabled={false}
                    id={null}
                    name={null}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyPress={[Function]}
                    type="search"
                    value="foo"
                  />
                </SimpleInput>
              </Component>
              <Portal
                name="scanner.icon.before"
                props={null}
              />
              <Portal
                name="scanner.icon"
                props={null}
              >
                <button
                  className="css-10ml0si"
                  onClick={[Function]}
                >
                  <BarcodeScanner>
                    <Icon
                      className=""
                      color={null}
                      content="<path d=\\"M89.6,129.7h40.1v240.5H89.6V129.7z M149.8,129.7h20.1v240.5h-20.1V129.7z M189.9,129.7H250v240.5h-60.1V129.7z  M270.1,129.7h20.1v240.5H270L270.1,129.7L270.1,129.7z M330.2,129.7h40.1v240.5h-40.1V129.7z M390.3,129.7h20.1v240.5h-20.1V129.7z  M49.5,89.6v80.2H9.4V89.6c0-10.6,4.2-20.8,11.7-28.3c7.5-7.5,17.7-11.7,28.3-11.7h80.2v40.1H49.5z M450.5,49.5 c10.6,0,20.8,4.2,28.3,11.7c7.5,7.5,11.7,17.7,11.7,28.3v80.2h-40.1V89.6h-80.2V49.5H450.5z M49.5,330.2v80.2h80.2v40.1H49.5 c-5.3,0-10.5-1-15.4-3.1c-4.9-2-9.3-5-13-8.7c-3.7-3.7-6.7-8.2-8.7-13c-2-4.9-3-10.1-3-15.4v-80.1H49.5z M450.5,410.4v-80.2h40.1 v80.2c0,10.6-4.2,20.8-11.7,28.3c-7.5,7.5-17.7,11.7-28.3,11.7h-80.2v-40.1L450.5,410.4z\\"/>"
                      size="inherit"
                      viewBox="0 0 500 500"
                    >
                      <svg
                        className="css-yys9hb "
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<path d=\\"M89.6,129.7h40.1v240.5H89.6V129.7z M149.8,129.7h20.1v240.5h-20.1V129.7z M189.9,129.7H250v240.5h-60.1V129.7z  M270.1,129.7h20.1v240.5H270L270.1,129.7L270.1,129.7z M330.2,129.7h40.1v240.5h-40.1V129.7z M390.3,129.7h20.1v240.5h-20.1V129.7z  M49.5,89.6v80.2H9.4V89.6c0-10.6,4.2-20.8,11.7-28.3c7.5-7.5,17.7-11.7,28.3-11.7h80.2v40.1H49.5z M450.5,49.5 c10.6,0,20.8,4.2,28.3,11.7c7.5,7.5,11.7,17.7,11.7,28.3v80.2h-40.1V89.6h-80.2V49.5H450.5z M49.5,330.2v80.2h80.2v40.1H49.5 c-5.3,0-10.5-1-15.4-3.1c-4.9-2-9.3-5-13-8.7c-3.7-3.7-6.7-8.2-8.7-13c-2-4.9-3-10.1-3-15.4v-80.1H49.5z M450.5,410.4v-80.2h40.1 v80.2c0,10.6-4.2,20.8-11.7,28.3c-7.5,7.5-17.7,11.7-28.3,11.7h-80.2v-40.1L450.5,410.4z\\"/>",
                          }
                        }
                        style={
                          Object {
                            "fill": null,
                            "fontSize": "inherit",
                          }
                        }
                        viewBox="0 0 500 500"
                        xmlns="http://www.w3.org/2000/svg"
                      />
                    </Icon>
                  </BarcodeScanner>
                </button>
              </Portal>
              <Portal
                name="scanner.icon.after"
                props={null}
              />
            </form>
          </div>
          <div>
            <button
              className="css-1su7ayj css-gyrv08"
              onClick={[Function]}
            >
              <Translate
                className=""
                params={Object {}}
                role={null}
                string="search.cancel"
              >
                <span
                  className=""
                  role={null}
                />
              </Translate>
            </button>
          </div>
        </div>
      </div>
    </SearchField>
  </Connect(SearchField)>
</Provider>
`;

exports[`<Content /> Check search field should show suggestions when focused 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(SearchField)
    pageId="1234"
    query="foo"
  >
    <SearchField
      fetchSuggestions={[Function]}
      name="search"
      openScanner={[Function]}
      pageId="1234"
      query="foo"
      showScannerIcon={true}
      submitSearch={[Function]}
    >
      <div
        aria-hidden={true}
        data-test-id="SearchField"
      >
        <div
          className="css-1jyozbi"
        >
          <div
            className="css-1utu657"
          >
            <form
              action="."
              onSubmit={[Function]}
            >
              <label
                className="css-y5wpat"
                htmlFor="search"
              >
                <div
                  className="css-tzdtea"
                >
                  <Magnifier>
                    <Icon
                      className=""
                      color={null}
                      content="<path d=\\"M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z\\"/>"
                      size="inherit"
                      viewBox="0 0 24 24"
                    >
                      <svg
                        className="css-yys9hb "
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<path d=\\"M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z\\"/>",
                          }
                        }
                        style={
                          Object {
                            "fill": null,
                            "fontSize": "inherit",
                          }
                        }
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      />
                    </Icon>
                  </Magnifier>
                </div>
              </label>
              <Component
                autoComplete={false}
                className="css-1yoassp"
                onChange={[Function]}
                onFocusChange={[Function]}
                onSubmit={[Function]}
                setRef={[Function]}
                type="search"
                value="foo"
              >
                <SimpleInput
                  attributes={null}
                  autoComplete={false}
                  autoCorrect={false}
                  className="css-1yoassp"
                  disabled={false}
                  id={null}
                  isControlled={false}
                  name={null}
                  onChange={[Function]}
                  onFocusChange={[Function]}
                  onKeyPress={[Function]}
                  onSanitize={[Function]}
                  onSubmit={[Function]}
                  onValidate={[Function]}
                  password={false}
                  setRef={[Function]}
                  type="search"
                  validateOnBlur={true}
                  value="foo"
                >
                  <input
                    autoComplete="off"
                    autoCorrect="off"
                    className="css-1yoassp"
                    disabled={false}
                    id={null}
                    name={null}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyPress={[Function]}
                    type="search"
                    value="foo"
                  />
                </SimpleInput>
              </Component>
            </form>
          </div>
          <div>
            <button
              className="css-1su7ayj"
              onClick={[Function]}
            >
              <Translate
                className=""
                params={Object {}}
                role={null}
                string="search.cancel"
              >
                <span
                  className=""
                  role={null}
                />
              </Translate>
            </button>
          </div>
        </div>
        <div
          className="css-1su8uh1"
        />
        <Connect(SuggestionList)
          bottomHeight={0}
          onClick={[Function]}
          searchPhrase="foo"
        />
      </div>
    </SearchField>
  </Connect(SearchField)>
</Provider>
`;
